[project]
name = "setuppython"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "radon (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
setuptools = "^78.1.0"
pip-audit = "^2.9.0"
prospector = "^1.16.1"
vulture = "^2.14"
mypy = "^1.15.0"
bandit = "^1.8.3"
radon = "^6.0.1"
pre-commit = "^4.2.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"


[tool.poetry.group.tests.dependencies]
coverage = "^7.8.0"
pytest-cov = "^6.1.1"
pytest = "^8.3.5"

[tool.black]
line-length =  79